--- a/src/main/resources/templates/template.qute.html
+++ b/src/main/resources/templates/template.qute.html
@@ -25,7 +25,7 @@
     <body>
         <div class="wrapper">
             <div class="topbar">
-                <a class="logo-container" href="index.html">
+                <a class="logo-container" href="dashboard">
                     <img id="azusaFaceset" src="img/azusa_logo.svg"/>
                     <span>Azusa</span>
                 </a>
@@ -37,7 +37,9 @@
                 <div class="nano has-scrollbar">
                     <div class="nano-content menu-content">
                         <ul class="menu-content-list">
-                            <li role="menuitem"><a href="index.html"><i class="fa fa-cat"></i><span>Dashboard</span></a></li>
+                            <li role="menuitem"><a href="dashboard"><i class="fa fa-cat"></i><span>Dashboard</span></a></li>
+                            <li role="menuitem"><a href="vapor"><i class="fa fa-gamepad"></i><span>Vapor</span></a></li>
+                            <li role="menuitem"><a href="swagger-ui/"><i class="fa fa-bars"></i><span>Swagger</span></a></li>
                         </ul>
                     </div>
                 </div>
