--- a/src/main/resources/templates/template.qute.html
+++ b/src/main/resources/templates/template.qute.html
@@ -40,6 +40,7 @@
                             <li role="menuitem"><a href="dashboard"><i class="fa fa-cat"></i><span>Dashboard</span></a></li>
                             <li role="menuitem"><a href="vapor"><i class="fa fa-gamepad"></i><span>Vapor</span></a></li>
                             <li role="menuitem"><a href="swagger-ui/"><i class="fa fa-bars"></i><span>Swagger</span></a></li>
+                            <li role="menuitem"><a href="skyscraper"><i class="fa fa-satellite-dish"></i><span>Skyscraper</span></a></li>
                         </ul>
                     </div>
                 </div>
