--- a/src/main/resources/templates/template.qute.html
+++ b/src/main/resources/templates/template.qute.html
@@ -6,27 +6,27 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- JQuery -->
-        <script src="js/jquery.js"></script>
+        <script src="/js/jquery.js"></script>
 
         <!-- Bootstrap -->
-        <link rel="stylesheet" href="css/bootstrap.css"/>
-        <script src="js/bootstrap.js"></script>
+        <link rel="stylesheet" href="/css/bootstrap.css"/>
+        <script src="/js/bootstrap.js"></script>
 
         <!-- Nanoscroller -->
-        <link rel="stylesheet" href="css/nanoscroller.css"/>
-        <script src="js/nanoscroller.js"></script>
+        <link rel="stylesheet" href="/css/nanoscroller.css"/>
+        <script src="/js/nanoscroller.js"></script>
 
         <!-- Font Awesome -->
-        <link rel="stylesheet" href="css/fontawesome.css"/>
+        <link rel="stylesheet" href="/css/fontawesome.css"/>
 
         <!-- Azusa -->
-        <link rel="stylesheet" href="css/azusa.css"/>
+        <link rel="stylesheet" href="/css/azusa.css"/>
     </head>
     <body>
         <div class="wrapper">
             <div class="topbar">
                 <a class="logo-container" href="dashboard">
-                    <img id="azusaFaceset" src="img/azusa_logo.svg"/>
+                    <img id="azusaFaceset" src="/img/azusa_logo.svg"/>
                     <span>Azusa</span>
                 </a>
                 <a class="topbar-content">
@@ -37,10 +37,10 @@
                 <div class="nano has-scrollbar">
                     <div class="nano-content menu-content">
                         <ul class="menu-content-list">
-                            <li role="menuitem"><a href="dashboard"><i class="fa fa-cat"></i><span>Dashboard</span></a></li>
-                            <li role="menuitem"><a href="vapor"><i class="fa fa-gamepad"></i><span>Vapor</span></a></li>
-                            <li role="menuitem"><a href="swagger-ui/"><i class="fa fa-bars"></i><span>Swagger</span></a></li>
-                            <li role="menuitem"><a href="skyscraper"><i class="fa fa-satellite-dish"></i><span>Skyscraper</span></a></li>
+                            <li role="menuitem"><a href="/dashboard"><i class="fa fa-cat"></i><span>Dashboard</span></a></li>
+                            <li role="menuitem"><a href="/vapor"><i class="fa fa-gamepad"></i><span>Vapor</span></a></li>
+                            <li role="menuitem"><a href="/swagger-ui/"><i class="fa fa-bars"></i><span>Swagger</span></a></li>
+                            <li role="menuitem"><a href="/skyscraper"><i class="fa fa-satellite-dish"></i><span>Skyscraper</span></a></li>
                         </ul>
                     </div>
                 </div>
