--- a/src/main/resources/templates/skyscraperTransponders.qute.html
+++ b/src/main/resources/templates/skyscraperTransponders.qute.html
@@ -12,12 +12,21 @@
         </tr>
         {#for transponder in transponders}
             <tr>
-                <td>{transponder.renderFrequency()}/{transponder.renderPolarization()}/{transponder.symbolrate}</td>
+                <td style="font-weight: bolder">{transponder.renderFrequency()}/{transponder.renderPolarization()}/{transponder.symbolrate}</td>
                 <td>{transponder.resolveSatNetwork()}</td>
                 <td>{transponder.renderSystem()}</td>
                 <td>{transponder.renderFec()}-{transponder.renderModulation()}</td>
-                <td>{transponder.lastvalid}</td>
+                <td>{transponder.renderLastSeen()}</td>
             </tr>
+            {#for service in transponder.getServices()}
+                <tr>
+                    <td style="text-align: right">{#if service.fta}<small>FTA</small>{/if}</td>
+                    <td>{service.name}</td>
+                    <td>{service.servicetype}</td>
+                    <td></td>
+                    <td>{service.renderLastSeen()}</td>
+                </tr>
+            {/for}
         {/for}
     </table>
 </div>
