--- a/src/main/resources/templates/template.qute.html
+++ b/src/main/resources/templates/template.qute.html
@@ -21,6 +21,8 @@
 
         <!-- Azusa -->
         <link rel="stylesheet" href="/css/azusa.css"/>
+
+        {#insert header}{/}
     </head>
     <body>
         <div class="wrapper">
@@ -40,7 +42,7 @@
                             <li role="menuitem"><a href="/dashboard"><i class="fa fa-cat"></i><span>Dashboard</span></a></li>
                             <li role="menuitem"><a href="/vapor"><i class="fa fa-gamepad"></i><span>Vapor</span></a></li>
                             <li role="menuitem"><a href="/swagger-ui/"><i class="fa fa-bars"></i><span>Swagger</span></a></li>
-                            <li role="menuitem"><a href="/skyscraper"><i class="fa fa-satellite-dish"></i><span>Skyscraper</span></a></li>
+                            <li role="menuitem"><a href="/skyscraper/"><i class="fa fa-satellite-dish"></i><span>Skyscraper</span></a></li>
                         </ul>
                     </div>
                 </div>
