--- a/src/main/resources/templates/template.qute.html
+++ b/src/main/resources/templates/template.qute.html
@@ -22,12 +22,15 @@
         <!-- Azusa -->
         <link rel="stylesheet" href="/css/azusa.css"/>
 
+        <!-- W3.CSS -->
+        <link rel="stylesheet" href="/css/w3.css"/>
+
         {#insert header}{/}
     </head>
     <body>
         <div class="wrapper">
             <div class="topbar">
-                <a class="logo-container" href="dashboard">
+                <a class="logo-container" href="/dashboard">
                     <img id="azusaFaceset" src="/img/azusa_logo.svg"/>
                     <span>Azusa</span>
                 </a>
@@ -43,6 +46,7 @@
                             <li role="menuitem"><a href="/vapor"><i class="fa fa-gamepad"></i><span>Vapor</span></a></li>
                             <li role="menuitem"><a href="/swagger-ui/"><i class="fa fa-bars"></i><span>Swagger</span></a></li>
                             <li role="menuitem"><a href="/skyscraper/"><i class="fa fa-satellite-dish"></i><span>Skyscraper</span></a></li>
+                            <li role="menuitem"><a href="/patchouli/smart"><i class="fa fa-hdd"></i><span>Disk Health</span></a></li>
                         </ul>
                     </div>
                 </div>
