Added index page for AG3DB Revival

--- a/src/main/resources/templates/template.qute.html
+++ b/src/main/resources/templates/template.qute.html
@@ -47,6 +47,7 @@
                             <li role="menuitem"><a href="/swagger-ui/"><i class="fa fa-bars"></i><span>Swagger</span></a></li>
                             <li role="menuitem"><a href="/skyscraper/"><i class="fa fa-satellite-dish"></i><span>Skyscraper</span></a></li>
                             <li role="menuitem"><a href="/patchouli/smart"><i class="fa fa-hdd"></i><span>Disk Health</span></a></li>
+                            <li role="menuitem"><a href="/js3db-revival/"><i class="fa fa-flushed"></i><span>AG3DB Revival</span></a></li>
                         </ul>
                     </div>
                 </div>
